ODE CHANGELOG
-------------

the rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every CVS log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------
02/03/12 Oleh Derevenko
		* Assertion checking macros moved from common.h to error.h
12/18/11 Oleh Derevenko
        * dIVERIFY macro added (same as dIASSERT in debug mode but evaluates its
          expression in release mode) to be used to assert variable value 
          which is not used further in text while avoiding compiler warning.
        * dICHECK macro added (same as dIASSERT but evaluates its expression and 
          raises assertion fault regardless of compilation mode) to be used to
          generate a fault in cases when error is very unlikely but must be 
          handled and handling is very troublesome (e.g. failure to lock a mutex
          due to lack of resources).

12/07/11 Oleh Derevenko
        * Partially fixed size_t to integer conversion warnings
        * Fixed type signedness and added casts to size_t wherever necessary 
          in Step/QuickStep

11/04/11 Daniel K. O.
        * Applied patch #3429454 - fix compilation on some platforms.

10/28/11 Daniel K. O.
        * Fixed a box-capsule bug: more reasonable normal for deep penetrations
          (contributed by Georg Martius.)

10/27/11 Daniel K. O.
        * Disabled merging of contacts for trimesh-sphere by default.
        * Added new demo: demo_tracks.

10/17/11 Daniel K. O.
        * Added python bindings, contributed by Gideon Klompje.
        * Updated some build scripts.
        * Changed spheres distribution in demo_space_stress.

05/17/11 Oleh Derevenko
        * A typo in step.cpp fixed (assignment operator in a conditional 
          instead of comparison) (reported by Bram Stolk)

01/29/11 Oleh Derevenko